test-data/negative/missing_property_arrow.aadl
-- ERROR: Missing '=>' in property association
package missing_property_arrow
public
    system s
    properties
        Period 100 ms;
    end s;
end missing_property_arrow;
